--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.8
 Flask-Login==0.1.1
+Flask-SQLAlchemy==0.16
 Jinja2==2.6
+SQLAlchemy==0.7.6
 Werkzeug==0.8.3
 gdata==2.0.17
 wsgiref==0.1.2
